# swafa

./: .gitignore  LICENSE.txt  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
Xiaoyu_file/: new_callbacks.py  params_laplace.yaml  params_new.yaml  params_new_laplace.yaml  params_new_v2.yaml  params_new_v2_laplace.yaml
Xiaoyu_file/larger_nn_experiments/: neural_net_predictions_fixD_Gaussian.py  neural_net_predictions_fixD_Laplace.py  neural_net_predictions_full_Gaussian.py  neural_net_predictions_full_Laplace.py
Xiaoyu_file/small_nn_experiments/: neural_net_predictions_laplace.py
experiments/: libsvm_datasets.py  linear_models.py  linear_models_analysis.py  linear_regression_posterior.py  linear_regression_posterior_analysis.py  linear_regression_predictions.py  linear_regression_predictions_analysis.py  linear_regression_vi.py  neural_net_predictions.py  online_fa.py  online_fa_analysis.py  slang_datasets.py  uci_datasets.py
experiments/notebooks/: LinearModelSGDIterates.ipynb  LinearModels.ipynb  LinearRegressionSGDIterates.ipynb  LinearRegressionVariationalInference.ipynb  LogisticRegressionDummyData.ipynb  LogisticRegressionUCIDatasets.ipynb  OnlineFactorAnalysis.ipynb
proposal/: clean_bib.rsc  main.bib  main.tex
swafa/: callbacks.py  custom_types.py  fa.py  models.py  posterior.py  utils.py
tests/: test_callbacks.py  test_fa.py  test_models.py  test_online_em_fa.py  test_online_fa.py  test_online_gradient_fa.py  test_posterior.py  test_swafa.py  test_utils.py
thesis/: clean_bib.sh  infthesis.cls  main.bib  main.tex  raw.bib
(+21 files in other folders)
