[tool.poetry]
name = "swafa"
version = "0.1.0"
description = ""
authors = ["Scott <scottbrownlie1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
